--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://t4.ftcdn.net/jpg/03/10/24/63/360_F_310246341_869grfwR1b87MN3qyFPe6yZZIRC83X31.jpg" class="d-block w-100 vh-100" alt="...">
+          <div class="carousel-item active" data-bs-interval="5000"> <!-- 1000 = 1s -->
+            <img src="photos/ministerDP.jpg" class="d-block w-100 vh-100" alt="...">
+            <div class="carousel-caption d-none d-lg-block">
+              <h1 class="text-dark">माननीय मन्त्री डोल प्रसाद अर्यालज्यूको पद बहाली(२०८०/११/२३ गते)</h1>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="https://t3.ftcdn.net/jpg/02/39/22/12/360_F_239221224_ZspRhx9wK21O82bALOVfCJfH2ox2YgNx.jpg" class="d-block w-100 vh-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMsWdUG0hxqRQTEAG100ram2DiIOkN22Ly8hKicRnl-GIZvspF6KCb9t78TBzrG0UdLiQ&usqp=CAU" class="d-block w-100 vh-100" alt="...">
+          <div class="carousel-item" data-bs-interval="10000">
+            <video class="d-block w-100 vh-100" autoplay muted playsinline>
+              <source src="videos/onlineWorkPermit.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
