--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
               <h1 class="text-dark">माननीय मन्त्री डोल प्रसाद अर्यालज्यूको पद बहाली(२०८०/११/२३ गते)</h1>
             </div>
           </div>
-          <div class="carousel-item" data-bs-interval="10000">
+          <div class="carousel-item active" data-bs-interval="5000"> <!-- 1000 = 1s -->
+            <img src="photos/IMG_5262.JPG" class="d-block w-100 vh-100" alt="...">
+            <div class="carousel-caption d-none d-lg-block">
+              <h1 class="text-dark">श्रमाधान रोजगार मेला, २०८१ को समुद्घाटन समारोह</h1>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="660000">
             <video class="d-block w-100 vh-100" autoplay muted playsinline>
               <source src="videos/onlineWorkPermit.mp4" type="video/mp4">
             </video>
