--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="carousel-item active" data-bs-interval="5000"> <!-- 1000 = 1s -->
-            <img src="photos/IMG_5262.JPG" class="d-block w-100 vh-100" alt="...">
+            <img src="photos/pmMin.JPG" class="d-block w-100 vh-100" alt="...">
             <div class="carousel-caption d-none d-lg-block">
               <h1 class="text-dark">श्रमाधान रोजगार मेला, २०८१ को समुद्घाटन समारोह</h1>
             </div>
